style(console): fix inspire me button spacing (#3542)

--- a/packages/console/src/onboarding/pages/SignInExperience/components/InspireMe/index.module.scss
+++ b/packages/console/src/onboarding/pages/SignInExperience/components/InspireMe/index.module.scss
@@ -7,6 +7,7 @@
   border-radius: 12px;
   background-color: var(--color-base);
   align-items: center;
+  justify-content: space-between;
 
   .inspireContent {
     margin-right: _.unit(6);
